<resources>
    <string name="app_name">Database_Application_SqLite</string>
    <string name="database_application_sqlite">Database Application SQlite</string>
    <string name="insert_data">Insert Data</string>
    <string name="read_data">Read Data</string>
    <string name="update_data">Update Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="retrive_infromation">Retrive infromation</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="insert">Insert</string>
</resources>