<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/database_application_sqlite"
        android:textColor="@color/teal_200"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/insert"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/insert_data"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/read"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/read_data"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/update"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/update_data"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/delete"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/delete_data"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>